Remove obsolete creation of task (we ship it with our code)